Successfully moved xhr to iife, as per requirements of the challenge

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<input type="text" id="input-box" class="form-control" placeholder="Enter Text Here" aria-describedby="sizing-addon1">
 		</div>
 		<div id="parking-spot"></div>
+		<script type="text/javascript" src="javascripts/loadInventory.js"></script>
 		<script type="text/javascript" src="javascripts/main.js"></script>
 		<script
 		  src="https://code.jquery.com/jquery-3.2.1.min.js"
