If statments in events.js started working, still need to figure out why the border isn't quite right

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 			<input type="text" id="input-box" class="form-control" placeholder="Enter Text Here" aria-describedby="sizing-addon1">
 		</div>
 		<div id="parking-spot"></div>
-		<script type="text/javascript" src="javascripts/loadInventory.js"></script>
-		<script type="text/javascript" src="javascripts/main.js"></script>
 		<script
 		  src="https://code.jquery.com/jquery-3.2.1.min.js"
 		  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
 		  crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script type="text/javascript" src="javascripts/loadInventory.js"></script>
+		<script type="text/javascript" src="javascripts/main.js"></script>
+		<script type="text/javascript" src="javascripts/events.js"></script>
 	</body>
 </html>
