Completed objectives for assignment appears to be functioning properly.  Need to finish commenting code

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
+
+<!-- 4. Put a standard Bootstrap navbar element at the top of your page. -->
 		<div class="input-group input-group-lg">
 			<span class="input-group-addon" id="sizing-addon1">Description</span>
+
+<!-- 5. Put a text input field in the navigation bar. -->
 			<input type="text" id="input-box" class="form-control" placeholder="Enter Text Here" aria-describedby="sizing-addon1">
 		</div>
+
+<!-- 6. Make sure you display all properties of the car in the DOM. Basic styling is up to you. -->
 		<div id="parking-spot"></div>
 		<script
 		  src="https://code.jquery.com/jquery-3.2.1.min.js"
